# python_web_server_template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app_config.yaml  pyproject.toml  setup.cfg
app/: __main__.py  app.py  application.py  log_config.py  main.py  nacos.py
app/config/: __init__.py  log_config.py
resources/: log_config.yaml
src/app/: __main__.py  application.py  nacos.py
src/app/config/: __init__.py
src/app/routers/: demo.py
src/resources/: app_config.yaml
tests/: conftest.py  test_apis.py  test_config.py  test_nacos.py
