[project]
name = "python_web_server_template"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "boholder", email = "bottleholder@anche.no" },
]
dependencies = [
    # Web application framework
    "fastapi>=0.110.0",
    # Underlying web server
    "uvicorn[standard]>=0.27.1",
    # The starlette.testclient module requires the httpx package to be installed.
    "httpx>=0.27.0",
    # For using X-Request-ID HTTP header or self-generated id as trace id shown in logs
    # ref: https://github.com/snok/asgi-correlation-id
    "asgi-correlation-id>=4.3.1",
    # For config file parsing
    "pyyaml>=6.0.1",
    "pydantic>=2.6.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.0.2",
]

[tool.pdm]
distribution = false

# Scripts for development
[tool.pdm.scripts]
dev = "python app/main.py --debug"
test = "pytest"

[tool.pytest.ini_options]
pythonpath = ["app", "tests"]
testpaths = ["tests"]
filterwarnings = [
    # This's a warning from httpx library, which is used in our unit tests:
    # fastapi.testclient.TestClient -> starlette -> httpx
    # Let's ignore it.
    "ignore:The \\'app\\' shortcut is now deprecated. Use the explicit style \\'transport=WSGITransport\\(app=\\.\\.\\.\\)\\' instead\\.",
]