[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "python_web_server_template"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "boholder", email = "bottleholder@anche.no" },
]
dependencies = [
    # Web application framework
    "fastapi>=0.110.0",
    # Underlying web server
    "uvicorn[standard]>=0.27.1",
    # The starlette.testclient module requires the httpx package to be installed.
    "httpx>=0.27.0",
    # For using X-Request-ID HTTP header or self-generated id as trace id shown in logs
    # ref: https://github.com/snok/asgi-correlation-id
    "asgi-correlation-id>=4.3.1",
    # For config file parsing
    "pyyaml>=6.0.1",
    # For data object parsing
    "pydantic>=2.6.3",
    # Use alibaba nacos as service discovery mechanism
    "nacos-sdk-rust-binding-py>=0.3.6a0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.0.2",
    "pytest-asyncio>=0.23.5",
    "pre-commit>=3.6.2",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "src"
includes = ["src/app"]
source-includes = ["tests", "LICENSE", "README.md"]

# Scripts for development
[tool.pdm.scripts]
dev = "python src/app/__main__.py --debug -c ./src/resources/app_config.yaml"
test = "pytest"
lint = "pre-commit run --all-files"
a = { composite = ["lint", "test"] }

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
filterwarnings = [
    # This's a warning from httpx library, which is used in our unit tests:
    # fastapi.testclient.TestClient -> starlette -> httpx
    # Let's ignore it.
    "ignore:The \\'app\\' shortcut is now deprecated. Use the explicit style \\'transport=WSGITransport\\(app=\\.\\.\\.\\)\\' instead\\.",
    # This's triggered by pytest-asyncio,
    # which calls deprecated asyncio.get_event_loop() method
    # ref: https://github.com/pytest-dev/pytest-asyncio/issues/757
    "ignore:There is no current event loop",
]

[tool.ruff]
line-length = 120
exclude = ["tests/fixtures"]
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
extend-select = [
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "PGH", # pygrep-hooks
    "RUF", # ruff
    "W", # pycodestyle
    "YTT", # flake8-2020
]
extend-ignore = ["B018", "B019", "RUF018"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["app"]

# https://github.com/codespell-project/codespell?tab=readme-ov-file#using-a-config-file
[tool.codespell]
ignore-words-list = ["ba", "te", "falsy"]
skip = "*.toml,*.yaml,*.md"

[project.scripts]
myapp = "app.__main__:main"
